Bug 154115 - adding a folder followed by attempting to add a feed causes a crash
Summary: adding a folder followed by attempting to add a feed causes a crash
Status: RESOLVED FIXED
Alias: None
Product: akregator
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-15 17:29 UTC by Ben Lewis
Modified: 2008-01-09 11:46 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (493 bytes, patch)
2007-12-15 20:19 UTC, Fábio Firmo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Lewis 2007-12-15 17:29:36 UTC
Version:           1.2.50 (using KDE KDE 3.97.0)
Installed from:    Ubuntu Packages
OS:                Linux

Using the KDE4 RC2 Ubuntu packaged version of Akregator 1.2.50, adding a folder and then attempting to add a feed crashes the program. This behaviour occurs whether in Kontact or as a standalone application.
Backtrace [and yes, no debugging symbols were found. ;)]
(no debugging symbols found)
Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1260431680 (LWP 11730)]
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
0xffffe410 in __kernel_vsyscall ()
[Current thread is 0 (process 11730)]

Thread 1 (Thread -1260431680 (LWP 11730)):
#0  0xffffe410 in __kernel_vsyscall ()
#1  0xb58fae70 in nanosleep () from /lib/tls/i686/cmov/libc.so.6
#2  0xb58faca7 in sleep () from /lib/tls/i686/cmov/libc.so.6
#3  0xb7ac2d60 in ?? () from /usr/lib/kde4/lib/libkdeui.so.5
#4  0x00000001 in ?? ()
#5  0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 1 Fábio Firmo 2007-12-15 19:23:00 UTC
I can confirm this (r748813). Here is the backtrace

Using host libthread_db library "/lib/tls/i686/cmov/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1259600192 (LWP 2461)]
[KCrash handler]
#6  0xffffe410 in __kernel_vsyscall ()
#7  0xb5887875 in raise () from /lib/tls/i686/cmov/libc.so.6
#8  0xb5889201 in abort () from /lib/tls/i686/cmov/libc.so.6
#9  0xb7e4201d in qt_message_output () from /usr/lib/libQtCore.so.4
#10 0xb7e420a1 in qFatal () from /usr/lib/libQtCore.so.4
#11 0xb7e4220d in qt_assert () from /usr/lib/libQtCore.so.4
#12 0xb3643a29 in QList<Akregator::TreeNode*>::last (this=0xbffa8340)
    at /usr/include/qt4/QtCore/qlist.h:246
#13 0xb36a1a5d in Akregator::MainWidget::slotFeedAdd (this=0x81c5668)
    at /home/fabio/kde/src/KDE/kdepim/akregator/src/mainwidget.cpp:723
#14 0xb36a33d3 in Akregator::MainWidget::qt_metacall (this=0x81c5668, 
    _c=QMetaObject::InvokeMetaMethod, _id=13, _a=0xbffa889c)
    at /home/fabio/kde/build/KDE/kdepim/akregator/src/mainwidget.moc:165
#15 0xb7f11c04 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#16 0xb7f11e00 in QMetaObject::activate () from /usr/lib/libQtCore.so.4
#17 0xb5ca6878 in QAction::triggered () from /usr/lib/libQtGui.so.4
#18 0xb5ca85e6 in QAction::activate () from /usr/lib/libQtGui.so.4
#19 0xb6093abf in ?? () from /usr/lib/libQtGui.so.4
#20 0x080a24d0 in ?? ()
#21 0x00000000 in ?? ()
#0  0xffffe410 in __kernel_vsyscall ()
Comment 2 Fábio Firmo 2007-12-15 20:19:43 UTC
Created attachment 22567 [details]
patch

This patch should solve the problem. This is my second patch for a KDE project,
so it may not be the best possible, but it's not a big deal, it only checks if
the group->children() is empty before look for its last child.
Comment 3 Frank Osterfeld 2008-01-09 11:46:34 UTC
SVN commit 758835 by osterfeld:

Do not crash when adding a feed to an empty folder
Patch by Fabio Firmo

CCMAIL:fabio.a.firmo@gmail.com
BUG:154115

 M  +1 -1      mainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=758835