Do not crash when adding a feed to an empty folder Patch by Fabio Firmo

CCMAIL:fabio.a.firmo@gmail.com
BUG:154115

svn path=/trunk/KDE/kdepim/akregator/; revision=758835